--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
         <p>copyright &copy; AKINWANDE OLASUNKANMI 2022</p>
     </section>
 
+    <!-- our service -->
+    <section id="ser">
+        <div class="container">
+            <h1>MY SERVICES</h1>
+        </div>
+    </section>
 
 
     <!-- aos js -->
