--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" media="screen and (max-width:530px)" href="/assets/css/phone.css">
     <!-- aos css -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css"  rel="stylesheet">
+    <!-- fontawesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- navbar -->
@@ -40,7 +42,7 @@
             <img src="/assets/img/bg2.jpg" alt="">
             <div id="intro">
                 <h2>AKINWANDE OLASUNKANMI</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas saepe doloremque debitis accusamus praesentium dolores aliquam perferendis harum magni, ipsa, quaerat eligendi numquam nam consequuntur quia! Sit velit rerum minus delectus quis. Aliquam mollitia saepe, velit exercitationem quos, assumenda, libero consequatur eos illum cupiditate culpa? Sed, magni officiis? Doloremque perspiciatis odit aliquam cum debitis ex consectetur quod nostrum! Quam placeat iusto tempore ex culpa quod quia voluptatibus similique modi autem fugit repellendus nemo labore ullam exercitationem molestiae explicabo dicta saepe vitae, non impedit, nulla quis. Consequatur deleniti autem doloremque qui laborum soluta corrupti, sint consectetur cum, blanditiis pariatur delectus nobis voluptates exercitationem fuga possimus fugit voluptatibus provident est debitis! Quaerat error, eius a quis, ullam inventore assumenda in magnam iure velit aspernatur cupiditate consequuntur cum. Eius praesentium laborum a quod id? Dolores totam, at cum facilis assumenda optio voluptate. Eos similique recusandae delectus quos accusamus at totam eaque atque voluptatibus!</p>
+                <p>Akinwande Olasunkanmi is a full-stack web developer with depth knowledge in HTML,CSS,Javascript,Django and Python. He is good at what he does and simple the best,the portfolio show off some of his skills such as clicking a menu item scrolls you to the relevant section</p>
             </div>
         </div>
     </section>
@@ -67,21 +69,21 @@
             data-aos-duration="3000">
                 <img src="/assets/img/frontend.jpg" alt="">
                 <h1 class="headings">Frontend Developer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ex perspiciatis dolor delectus saepe sit aliquid ea, quaerat repellendus a? Architecto accusamus suscipit esse neque. Recusandae numquam autem cupiditate. Officiis?</p>
+                <p>Front-end web development is the development of the graphical user interface of a website, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that website</p>
             </div>
             <div class="box" data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
             data-aos-duration="3000">
                 <img src="/assets/img/backend.jpg" alt="">
                 <h1 class="headings">Backend Developer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ex perspiciatis dolor delectus saepe sit aliquid ea, quaerat repellendus a? Architecto accusamus suscipit esse neque. Recusandae numquam autem cupiditate. Officiis?</p>
+                <p>Backend refers to the separation of concerns between the presentation layer (frontend), and the data access layer (backend) of a piece of software, or the physical infrastructure or hardware. In the client–server model, the client is usually considered the frontend and the server is usually considered the backend, even when some presentation work is actually done on the server itself.</p>
             </div>
             <div class="box" data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
             data-aos-duration="3000">
                 <img src="/assets/img/ux.png" alt="">
                 <h1 class="headings">UX/UI Developer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ex perspiciatis dolor delectus saepe sit aliquid ea, quaerat repellendus a? Architecto accusamus suscipit esse neque. Recusandae numquam autem cupiditate. Officiis?</p>
+                <p>UI UX designers create the user interface for an app, website, or other interactive media. Their work includes collaborating with product managers and engineers to gather requirements from users before designing ideas that can be communicated using storyboards. They also process flows or sitemaps.</p>
             </div>
         </div>
     </section>
@@ -94,6 +96,7 @@
             <input type="email" name="email" class="input" placeholder="Enter Your Email">
             <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
             <input type="submit" value="SEND" id="send">
+            <i class="fa fa-phone" aria-hidden="true">  @   2347069517783</i>
         </form>
     </section>
 
