--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css"  rel="stylesheet">
     <!-- fontawesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- fontawesome icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
 </head>
 <body>
     <!-- navbar -->
@@ -51,12 +53,36 @@
     <section id="portfolio">
         <h1 class="headings">PORTFOLIO</h1>
         <div class="gallery">
-            <img src="/assets/img/images (10).jpeg" alt="">
-            <img src="/assets/img/images (2).jpeg" alt="">
-            <img src="/assets/img/images (3).jpeg" alt="">
-            <img src="/assets/img/images (4).jpeg" alt="">
-            <img src="/assets/img/images (5).jpeg" alt="">
-            <img src="/assets/img/images (6).jpeg" alt="">
+            <div>
+                <a href="http://idealprimary.netlify.app" target="_blank">
+                    <img src="/assets/img/ideal.png" alt="idealprimary">
+                </a>
+            </div>
+            <div>
+                <a href="http://adunnicollections.netlify.app" target="_blank">
+                    <img src="/assets/img/adunni.png" alt="adunnicollections">
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="/assets/img/images (3).jpeg" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="/assets/img/images (4).jpeg" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="/assets/img/images (5).jpeg" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="/assets/img/images (6).jpeg" alt="">
+                </a>
+            </div>
         </div>
     </section>
 
@@ -96,8 +122,21 @@
             <input type="email" name="email" class="input" placeholder="Enter Your Email">
             <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
             <input type="submit" value="SEND" id="send">
-            <i class="fa fa-phone" aria-hidden="true">  @   2347069517783</i>
         </form>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <i class="fa fa-phone-square" aria-hidden="true">
+                        <a href="tel:+2347069517783" target="_blank">+2347069517783</a>
+                    </i>
+                </div>
+                <div class="col-md-6">
+                    <i class="fa fa-whatsapp" aria-hidden="true">
+                        <a href="https://wa.me/2347069517783?text=Hello" target="_blank">+2347069517783</a>
+                    </i>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- footer -->
@@ -110,7 +149,8 @@
 
     <!-- aos js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
+    <!-- bootstrap js cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <!-- initialize aos -->
     <script>
         // aos
