--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
                 </a>
             </div>
             <div>
-                <a href="">
-                    <img src="/assets/img/images (3).jpeg" alt="">
+                <a href="http://abcdinstitutenetlify.app" target="_blank">
+                    <img src="/assets/img/abcd.png" alt="abcdinstitute">
                 </a>
             </div>
             <div>
-                <a href="">
-                    <img src="/assets/img/images (4).jpeg" alt="">
+                <a href="http://myquickquizapp.netlify.app" target="_blank">
+                    <img src="/assets/img/quiz.png" alt="quickquiz">
                 </a>
             </div>
             <div>
-                <a href="">
-                    <img src="/assets/img/images (5).jpeg" alt="">
+                <a href="http://mytttgame.netlify.app" target="_blank">
+                    <img src="/assets/img/tic tac toe.png" alt="tictactoe">
                 </a>
             </div>
             <div>
-                <a href="">
-                    <img src="/assets/img/images (6).jpeg" alt="">
+                <a href="http://openmyweatherapp.netlify.app" target="_blank">
+                    <img src="/assets/img/weather.png" alt="weatherapp">
                 </a>
             </div>
         </div>
