--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </a>
             </div>
             <div>
-                <a href="http://abcdinstitutenetlify.app" target="_blank">
+                <a href="http://abcdinstitute.netlify.app" target="_blank">
                     <img src="/assets/img/abcd.png" alt="abcdinstitute">
                 </a>
             </div>
